--- a/192/index.html
+++ b/192/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-04-09 -->
+<!-- 2024-04-10 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>192</title>
@@ -1180,7 +1180,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 <section id="outline-container-org366482f" class="outline-2">
 <h2 id="org366482f"><span class="section-number-2">4.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-4">
-<table id="org53e5988">
+<table id="org038f5d0">
 
 
 <colgroup>
@@ -1188,272 +1188,272 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 
 <col  class="org-left">
 
-<col  class="org-left">
+<col  class="org-right">
 </colgroup>
 <thead>
 <tr>
 <th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-left"><a href="#org4a1e152">2024-04-09</a></th>
+<th scope="col" class="org-right"><a href="#org4a1e152">2024-04-09</a></th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">李吉</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">段文潇</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">黄飞超</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">1</td>
 </tr>
 
 <tr>
 <td class="org-right">5</td>
 <td class="org-left">许焕圣</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">古远东</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">黄可彬</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">4</td>
-<td class="org-left">贝俊霖</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-right">2</td>
-<td class="org-left">高旻昱</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">肖义珥</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">6</td>
-<td class="org-left">段京文</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">郭榕荣</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">2</td>
-<td class="org-left">刘虹佑</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">梁泽文</td>
-<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">5</td>
 <td class="org-left">何华为</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-right">3</td>
-<td class="org-left">刘广鸿</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">1</td>
-<td class="org-left">吴幸林</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">李泽俊</td>
-<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">5</td>
 <td class="org-left">韦金良</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">4</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">肖义珥</td>
+<td class="org-right">5</td>
+</tr>
+
+<tr>
+<td class="org-right">2</td>
+<td class="org-left">高旻昱</td>
+<td class="org-right">6</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">刘广鸿</td>
+<td class="org-right">7</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">段文潇</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">黄飞超</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">古远东</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">黄可彬</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">4</td>
+<td class="org-left">贝俊霖</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">段京文</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">郭榕荣</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">2</td>
+<td class="org-left">刘虹佑</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">梁泽文</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">吴幸林</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">李泽俊</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">苏大明</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">陈梓鑫</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">叶宇</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">张甘霖</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">余海中</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">谭鑫</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">李耀武</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">麦天河</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">唐景富</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">王海波</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">陈颖聪</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">饶展源</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">谢晓中</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">沈艺宏</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">薛进超</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">段文锋</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">陆宇轩</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">刘翔</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">6</td>
 <td class="org-left">周永久</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">6</td>
 <td class="org-left">张桂毓</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">6</td>
 <td class="org-left">刘泽泉</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">李岳元</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">何晓东</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">卢德涛</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">岑法政</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 </tbody>
 </table>
@@ -1461,7 +1461,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 
 <details><summary>history score</summary>
 
-<table id="org038f5d0">
+<table id="org77bf3af">
 
 
 <colgroup>
@@ -1837,7 +1837,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-04-09</p>
+<p class="date">Created: 2024-04-10</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
